# humanoid-robot-project

./: .gitignore  .gitmodules  IMU_data.ino  README.md  frames_2024-06-19_13.51.49.gv  frames_2024-06-19_15.48.55.gv  launch_nodes.py
install/: local_setup.sh  setup.sh
install/asio_cmake_module/share/asio_cmake_module/: local_setup.sh  package.sh
install/behaviortree_cpp_v3/share/behaviortree_cpp_v3/: local_setup.dsv  local_setup.sh  package.ps1  package.sh
install/costmap_queue/share/costmap_queue/: local_setup.sh  package.sh
install/dwb_core/share/dwb_core/: local_setup.sh  package.sh
install/dwb_critics/share/dwb_critics/: local_setup.sh  package.sh
install/dwb_msgs/share/dwb_msgs/: local_setup.sh  package.sh
install/dwb_plugins/share/dwb_plugins/: local_setup.sh  package.sh
install/fake_odometry_publisher/lib/fake_odometry_publisher/: fake_odometry_publisher
install/fake_odometry_publisher/share/fake_odometry_publisher/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/imu_publisher/share/imu_publisher/: package.bash  package.zsh
install/imu_publisher_cpp/lib/imu_publisher_cpp/: imu_node
install/imu_publisher_cpp/share/imu_publisher_cpp/: local_setup.dsv  local_setup.sh  package.dsv  package.sh  package.xml  package.zsh
install/imu_publisher_cpp/share/imu_publisher_cpp/launch/: imu_publisher_launch.py
install/io_context/share/io_context/: local_setup.sh  package.sh
install/mapping_launch/share/mapping_launch/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nav2_amcl/lib/nav2_amcl/: amcl
install/nav2_amcl/share/nav2_amcl/: local_setup.sh  package.sh
install/nav2_behavior_tree/share/nav2_behavior_tree/: local_setup.sh  package.bash  package.sh  package.zsh
install/nav2_behaviors/lib/nav2_behaviors/: behavior_server
install/nav2_behaviors/share/nav2_behaviors/: local_setup.sh  (+1 more)
install/slam_toolbox/share/: rviz_plugins.xml  solver_plugins.xml
log/: latest_build
src/fake_odometry_publisher/: CMakeLists.txt  package.xml
src/fake_odometry_publisher/launch/: fake_odom.launch.py
src/fake_odometry_publisher/src/: fake_odometry_publisher.cpp
src/imu_publisher_cpp/: CMakeLists.txt
src/imu_publisher_cpp/launch/: imu_publisher_launch.py
src/imu_publisher_cpp/src/: imu_node.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/mapping_launch/: package.xml  setup.py
src/mapping_launch/launch/: mapping_launch.py
src/s_tf_pub/: CMakeLists.txt
src/s_tf_pub/launch/: mapping_launch.py
(+641 files in other folders)
